--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,11 @@
 This document keeps track of considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+12/10/2020:
+	Changed AnimationComponent to take in a reference to an animation rather than a pointer because it makes more sense. We never want to pass a null animation to the component and in the off chance that we have a AnimationWrapper* const variable, we want to be able to dereference the pointer to pass the animation to the component while making the pointer const. Basically, we care more about the AnimationWrapper than the pointer, so we pass by reference.
+	Tentative change that changed all Unit and ObjectAssembler member variables to public and const. These variables will never change and are effectively static; may as well make them public for cleanliness and also removes the need for getter functions. We can't make assemblers aggregates because: 
+	1. The constructor of aggregates is how we added assemblers to different buckets.
+	2. We literally can't lol: the assemble function is a virtual member function. 
+
 11/17/2020:
 	Big glInterface changes have been made. Windows and Buttons are now Panels, which can be added to windows. Panels have an update function that takes in a mouse position, z, and a scale rect, which is a glm::vec4 where the x,y is a displacement for the rect and the dimensions are the scaling dimensions. The reason for having the users explicitly pass the mouse position is so that they can decide how to calculate the mouse position, since in some cases, such as when the camera zooms in, the mouse position can be calculated in different ways. We could have them just pass in the scale rect and then we calculate the mouse position explicitly but this gives us a bit more flexibility. Honestly, I'm just too lazy to improve on it, since every change causes such a large cascade of changes.
 
