Added new units and armor.

--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,7 +1,18 @@
 This document keeps track of considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
-2/14/2021:
-	Panel's updateBlit now modifies mousePos based on the blit rect for convenience. updateBlit purposely doesn't take in a mousePos as a parameter because it's supposed to handle it. This will ensure that it will handle it correctly.
+3/1/2021:
+	Added tempArmor to the HealthComponent to help in keeping track of armor. By simply adding and subtracting from armor, we run into the issue that we have to reset armor to 0 at some point but because some components that wnat to modify it occur before HealthComponent::update() and some occur after, it's not easy setting armor to 0 and not overwrite any armor increases or decreases. Temp armor serves as a counter of all the armor modifications. While it does mean that any armor modifications will not take place until HealthComponent::update, this is only applicable for the first frame that an armor modification is made and only applicable to damage dealt before the update called which is a small enough deficit for us to overlook.
+
+2/27/2021:
+	Panel::updateBlit now no longer affects mousePos at all. It is simply impossible to calculate mousePos without knowing about the camera before hand. An alternative function could take in the camera and translate accordingly but that doesn't work either because Panels are unaware of if itself is absolute or not. A second updateBlit takes care of this. Panel::updateBlit(2) takes in a camera and a bool on whether or not to render absolute or not. This allows better translation of mousePos.
+	Decision to have Panel::updateBlit take in a function that returns a rect and translate mousePos was decided against because the fact that lambdas that capture variables can't be passed in as function pointers makes it difficult to do basic translations that don't involve static variables. For example, [](glm::vec4 rect){return blit;} is impossible because this lambda has to capture blit unless blit is global.
+
+2/18/2021:
+	Some class exclusive components in friendlyAssemblers no longer inherit from componentContainer because the only reason we do that, is to ensure that it can be retrieved via getComponent. Since private components can only even be referenced by members of the class that they are private to, it's unlikely that they will ever be retrieved by getComponent, and as a slight performance boost, we don't bother adding them to ComponentContainer.
+	AttackComponent has a new struct called AttackData, which stores modifiable data like range, damage, and endLag (inverse of attack speed). This is mainly to help keep track of modified vs base data. While we could have two copies of the data for base and modified, this eliminates some typing. For example, if we want to reset our custom data, we could just set modData = baseData rather than individually setting every member. This is also more flexible for when we add more data that can be modified.
+
+2/14/2021: 
+	Panel's updateBlit now modifies mousePos based on the blit rect for convenience. updateBlit purposely doesn't take in a mousePos as a parameter because it's supposed to handle it. This will ensure that it will handle it correctly. (REVOKED: 2/27/2021)
 
 2/4/2021:
 	After much work, the grouping behavior in Ants Game has been pushed. It's not perfect but should suffice for now. It currently sets all ants to the same point and all ants independently move towards it. Ants will stop once they arrived at their destination or, more likely, bumped into another ant that's arrived and the current ant is within a certain distance of the destination. This distance is the maximum distance from the destination that ants that have reached the destination have reached. Since ants can be pushed, this distance may be quite far and only grows as more ants reach the destination. Without this additional condition, ant groups will stop immediately after one ant reaches the destination, which while fine, means that in large groups, most ants won't be very close to the target at all. This solution isn't perfect, but it does improve it somewhat.
