--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,8 @@
 This document keeps track of considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+3/31/2021:
+	AttackComponent is no longer an attack but rather just an "attack". When creating attacks, we must consider the AI that determines when to attack, and the attack, which simply keeps track of a cooldown and maybe spawns a hitbox. Attacks should only be made if certain conditions are met. Previously, this was done with the canAttack function and while this can still work, it doesn't really make sense for it to be a component. Attacks don't have to run every iteration via the update function. Rather, they should be a collection of data representing an attack, which an AI component or a Weapon Component can call the attack function of. This isn't to say that Attacks can't be implemented with components but it doesn't make much sense. For example, take WeaponComponent, which has 3 attacks that trigger on the press of a button. Previously, pressing a button would trigger an AttackComponent's update function, which would do something if the attack was on cooldown. This simply doesn't really make sense because why are we calling an update function when all it does is something for one frame? We could change the AttackComponent's canAttack function to check if a button is being pressed and then call canAttack() in update() every frame but that just doesn't really make much intuitive sense. It makes more sense for WeaponComponent, the component controlling and keeping track of inputs, to handle that rather than the Attacks.
+
 3/24/2021:
 	Decided to have WeaponAnimationComponent control all weapon animations. This allows us to organize all player rendering in on spot. SInce rendering weapons requires rendering the arm over the weapon, it's better to concentrate everything into one function for organization.
 
