Players can no longer be pushed through walls. Dinosaur enemy fully implemented (outside of sound of course). HitboxAttacks offer a bit more control over when a hitbox disappears and appears. Attacks no longer endlessly loop if the cooldown is the <= the attack duration.

--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,11 @@
 This document keeps track of considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+4/18/2021:
+	HitboxComponent is now a complete ProjectileComponent, mainly because it has all the properties of a projectile. In fact, the only difference is that it's only active for a brief amount of time before deactivating, rather than moving off screen and getting deleted. The reason it deactivates is so that HitboxAttacks can assemble a hitbox once and then reuse it over and over again, since there really only needs to be one hitbox that is only present at one position(attacks that use multiple hitboxes can simply inherit from HitboxAttacks and add their own implementation. 
+	HitboxComponent now keeps track of whether the hitbox is active separately from ObjectComponent's inactive member variable. This makes sense because the hitboxcomponent wants to keep track of whether the object is inactive or not regardless of the ObjectComponent. Obviously the ObjectComponent is what really controls it, but if something doesn't have an ObjectComponent, we can still use the HitboxComponent's variable to keep track.
+4/5/2021:
+	Attack::canAttack() now returns false if is on cooldown. We initially didn't worry about if the attack was on cooldown because with AntsGame, even if an attack was on cooldown, we still wanted the units to stop and wait until their attack was off cooldown. But now, we have attack animations and it doesn't make sense for units to go through their attack animations when they are on cooldown, so canAttack has been changed.
+
 3/31/2021:
 	AttackComponent is no longer an attack but rather just an "attack". When creating attacks, we must consider the AI that determines when to attack, and the attack, which simply keeps track of a cooldown and maybe spawns a hitbox. Attacks should only be made if certain conditions are met. Previously, this was done with the canAttack function and while this can still work, it doesn't really make sense for it to be a component. Attacks don't have to run every iteration via the update function. Rather, they should be a collection of data representing an attack, which an AI component or a Weapon Component can call the attack function of. This isn't to say that Attacks can't be implemented with components but it doesn't make much sense. For example, take WeaponComponent, which has 3 attacks that trigger on the press of a button. Previously, pressing a button would trigger an AttackComponent's update function, which would do something if the attack was on cooldown. This simply doesn't really make sense because why are we calling an update function when all it does is something for one frame? We could change the AttackComponent's canAttack function to check if a button is being pressed and then call canAttack() in update() every frame but that just doesn't really make much intuitive sense. It makes more sense for WeaponComponent, the component controlling and keeping track of inputs, to handle that rather than the Attacks.
 
