Level design finished. Players can now reach the world map after killing all enemies in every room in a level

--- a/documents/history.txt
+++ b/documents/history.txt
@@ -1,5 +1,9 @@
 This document keeps track of considered changes made to the resources as well as why they were made. Consider this a "learning from the past" kind of document. 
 
+5/20/2021:
+	assemblerInit .h and .cpp have been added as a way to simplify the initialization of static UnitAssemblers. Having a static UnitAssembler for each assembler has proven useful however, declaring them was a pain. One had to forward declare them in a header file, then declare them in a cpp file. It also became apparent that these assemblers couldn't be initialized immediately, and instead, an initialize assemblers function was needed to ensure that they were only initialized when all resources were also initialized. This initAssemblers function, however, was more or less just calling std::shared_ptr<UnitAssembler>.reset(), which, while simple, was another task added to the list of things that needed to be done when creating a UnitAssembler, not to mention one easily automated with templates. With this new implementation, all one has to do is add a type to a addUnitToBucket call, which will create a static assembler if it doesn't exist, and then add it to the provided bucket. The only thing that still needs to be globally created as before are UnitBuckets, but this is unavoidable, as UnitBuckets each have their own unique list of entities. Users can now still generate a random assembler from a bucket with getRandomAssembler, or use StaticMount<T>.assembler.ptr.get() to fetch a specific UnitAssembler.
+	(Update 5/21/2021: StaticMount<T> now has a getPtr function, which is basically shorthand for StaticMount<T>.assembler.ptr.get().)
+
 4/18/2021:
 	HitboxComponent is now a complete ProjectileComponent, mainly because it has all the properties of a projectile. In fact, the only difference is that it's only active for a brief amount of time before deactivating, rather than moving off screen and getting deleted. The reason it deactivates is so that HitboxAttacks can assemble a hitbox once and then reuse it over and over again, since there really only needs to be one hitbox that is only present at one position(attacks that use multiple hitboxes can simply inherit from HitboxAttacks and add their own implementation. 
 	HitboxComponent now keeps track of whether the hitbox is active separately from ObjectComponent's inactive member variable. This makes sense because the hitboxcomponent wants to keep track of whether the object is inactive or not regardless of the ObjectComponent. Obviously the ObjectComponent is what really controls it, but if something doesn't have an ObjectComponent, we can still use the HitboxComponent's variable to keep track.
